fix: carousel behavior on mobile device

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,3 +1,12 @@
+:root {
+	--code-color: darkred;
+	--code-bg-color: #aaaaaa;
+	--code-font-size: 14px;
+	--code-line-height: 1.4;
+	--scroll-bar-color: #c5c5c5;
+	--scroll-bar-bg-color: #f6f6f6;
+}
+
 html {
 	scroll-behavior: smooth;
 }
@@ -25,5 +34,32 @@ button {
 		margin-left: auto;
 		margin-right: auto;
 		width: 100%;
+	}
+}
+
+::-webkit-scrollbar-corner {
+	background: rgba(0, 0, 0, 0);
+}
+
+@media screen and (min-width: 768px) {
+	* {
+		scrollbar-width: thin;
+		scrollbar-color: var(--scroll-bar-color) var(--scroll-bar-bg-color);
+	}
+
+	/* Works on Chrome, Edge, and Safari */
+	*::-webkit-scrollbar {
+		width: 12px;
+		height: 12px;
+	}
+
+	*::-webkit-scrollbar-track {
+		background: var(--scroll-bar-bg-color);
+	}
+
+	*::-webkit-scrollbar-thumb {
+		background-color: var(--scroll-bar-color);
+		border-radius: 20px;
+		border: 3px solid var(--scroll-bar-bg-color);
 	}
 }
